2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock.c, irq/irq_init.c, vectors/vectors.h,
	vectors/vectors_init.c: Add missing prototypes.

2008-08-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* start/start.S: Clear environment pointer for bootcard.

2008-07-29	Chris Johns <chrisj@rtems.org>

	* ide/pcmcia_ide.c: Updated to the libblock changes.

2008-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, include/bsp.h: Add bsp_uboot_getenv() to obtain U-Boot
	environment variables.
	* startup/uboot_support.c: New file.

2008-06-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq.c: Add units.

2008-06-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h, irq/irq.c, irq/irq_init.c, startup/bspclean.c,
	startup/bspstart.c: Slightly better names for IRQ benchmarking. Make
	sure the routines are present all the time.

2008-05-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Remove explicit switch and call
	termios_baud_to_number().

2008-05-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Properly inform termios of our initial baud rate.
	If it is not the default, this causes problems when an application
	changes any termios attributes since termios thinks our baud rate is
	one thing when in fact, it is another.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the
	shared framework can initialize the C Library, call
	rtems_debug_enable(), and dirty the work area memory. Until most/all
	BSPs support this new capability, if the BSP supports this, it should